--- a/app.css
+++ b/app.css
@@ -125,6 +125,14 @@ p {
     margin: 0 auto;
 }
 
+#metric {
+    margin-right: 15px;
+}
+
+.imperial-form {
+    display: none;
+}
+
 form p {
     margin-bottom: 0.3em;
     font-size: 1.3em;
@@ -153,22 +161,18 @@ select {
     display: block;
 }
 
-#btn {
-    display: inline-block;
-    background: #ccc;
-    padding: 0.8em;
-    margin: 1.2em auto;
-    transition: ease 0.3s all;
-}
 
-#btn:hover {
-    background: #777;
-    color: #fff;
-    cursor: pointer;
+.error {
+    color: red;
 }
 
 /* Footer */
 .fine-print {
     display: block;
     font-size: 0.7em;
+}
+
+.signoff-text {
+    font-family: 'Frijole', cursive;
+    font-size: 2.0em;
 }
